# Weclapp-Haskell-Library

./: .stylish-haskell.yaml  README.md  openapi-configuration.yml  openapi-specification.yml  weclappapi.cabal
src/: WeclappAPI.hs
src/WeclappAPI/: Common.hs  Configuration.hs  Extra.hs  SecuritySchemes.hs  TypeAlias.hs  Types.hs
src/WeclappAPI/Operations/: Delete_archivedEmail_id__id_.hs  Delete_articleAccountingCode_id__id_.hs  Delete_articleCategory_id__id_.hs  Delete_articleRating_id__id_.hs  Delete_article_id__id_.hs  Delete_blanketPurchaseOrder_id__id_.hs  Delete_campaignParticipant_id__id_.hs  Delete_campaign_id__id_.hs  Delete_comment_id__id_.hs  Delete_companySize_id__id_.hs  Delete_contact_id__id_.hs  Delete_costCenterGroup_id__id_.hs  Delete_customerCategory_id__id_.hs  Delete_customerLeadLossReason_id__id_.hs  Delete_customerTopic_id__id_.hs  Delete_customer_id__id_.hs  Delete_customsTariffNumber_id__id_.hs  Delete_document_id__id_.hs  Delete_leadRating_id__id_.hs  Delete_leadSource_id__id_.hs  Delete_lead_id__id_.hs  Delete_ledgerAccount_id__id_.hs  Delete_legalForm_id__id_.hs  Delete_manufacturer_id__id_.hs  Delete_opportunityTopic_id__id_.hs  Delete_opportunityWinLossReason_id__id_.hs  Delete_opportunity_id__id_.hs  Delete_partyRating_id__id_.hs  Delete_party_id__id_.hs  Delete_paymentMethod_id__id_.hs  Delete_personalAccountingCode_id__id_.hs  Delete_productionOrder_id__id_.hs  Delete_purchaseOrderRequest_id__id_.hs  Delete_quotation_id__id_.hs  Delete_remotePrintJob_id__id_.hs  Delete_salesInvoice_id__id_.hs  Delete_salesStage_id__id_.hs  Delete_sector_id__id_.hs  Delete_shipmentMethod_id__id_.hs  Delete_shipmentReturnAssessment_id__id_.hs  (+427 more)
src/WeclappAPI/Types/: AccountingTransaction.hs  AccountingTransaction.hs-boot  AccountingTransactionDetail.hs  AccountingTransactionDetail.hs-boot  Address.hs  Address.hs-boot  ArchivedEmail.hs  ArchivedEmail.hs-boot  Article.hs  Article.hs-boot  ArticleAlternativeQuantity.hs  ArticleAlternativeQuantity.hs-boot  ArticleCalculationPrice.hs  ArticleCalculationPrice.hs-boot  ArticleCategory.hs  ArticleCategory.hs-boot  ArticleImage.hs  ArticleImage.hs-boot  ArticlePrice.hs  ArticlePrice.hs-boot  ArticlePriceWithoutArticleReference.hs  ArticlePriceWithoutArticleReference.hs-boot  ArticlePriceWithoutSalesChannel.hs  ArticlePriceWithoutSalesChannel.hs-boot  ArticleSupplySource.hs  ArticleSupplySource.hs-boot  BatchNumber.hs  BatchNumber.hs-boot  BillOfMaterial.hs  BillOfMaterial.hs-boot  BlanketPurchaseOrder.hs  BlanketPurchaseOrder.hs-boot  BlanketPurchaseOrderStatusHistory.hs  BlanketPurchaseOrderStatusHistory.hs-boot  Campaign.hs  Campaign.hs-boot  CampaignParticipant.hs  CampaignParticipant.hs-boot  CashAccount.hs  CashAccount.hs-boot  (+192 more)
