cabal-version: 1.12

name:           weclappapi
version:        0.2.0.0
build-type:     Simple

library
  exposed-modules:
      WeclappAPI.Extra
      WeclappAPI
      WeclappAPI.Operations.Get_accountingTransaction
      WeclappAPI.Operations.Get_accountingTransaction_count
      WeclappAPI.Operations.Get_accountingTransaction_id__id_
      WeclappAPI.Operations.Get_archivedEmail
      WeclappAPI.Operations.Get_archivedEmail_count
      WeclappAPI.Operations.Get_archivedEmail_id__id_
      WeclappAPI.Operations.Delete_archivedEmail_id__id_
      WeclappAPI.Operations.Get_article
      WeclappAPI.Operations.Post_article
      WeclappAPI.Operations.Get_article_count
      WeclappAPI.Operations.Get_article_id__id_
      WeclappAPI.Operations.Put_article_id__id_
      WeclappAPI.Operations.Delete_article_id__id_
      WeclappAPI.Operations.Get_article_id__id__downloadArticleImage
      WeclappAPI.Operations.Get_article_id__id__downloadMainArticleImage
      WeclappAPI.Operations.Post_article_id__id__uploadArticleImage
      WeclappAPI.Operations.Get_articleAccountingCode
      WeclappAPI.Operations.Post_articleAccountingCode
      WeclappAPI.Operations.Get_articleAccountingCode_count
      WeclappAPI.Operations.Get_articleAccountingCode_id__id_
      WeclappAPI.Operations.Put_articleAccountingCode_id__id_
      WeclappAPI.Operations.Delete_articleAccountingCode_id__id_
      WeclappAPI.Operations.Get_articleCategory
      WeclappAPI.Operations.Post_articleCategory
      WeclappAPI.Operations.Get_articleCategory_count
      WeclappAPI.Operations.Get_articleCategory_id__id_
      WeclappAPI.Operations.Put_articleCategory_id__id_
      WeclappAPI.Operations.Delete_articleCategory_id__id_
      WeclappAPI.Operations.Get_articleCategory_id__id__downloadImage
      WeclappAPI.Operations.Post_articleCategory_id__id__uploadImage
      WeclappAPI.Operations.Get_articlePrice
      WeclappAPI.Operations.Get_articlePrice_count
      WeclappAPI.Operations.Get_articlePrice_id__id_
      WeclappAPI.Operations.Get_articleRating
      WeclappAPI.Operations.Post_articleRating
      WeclappAPI.Operations.Get_articleRating_count
      WeclappAPI.Operations.Get_articleRating_id__id_
      WeclappAPI.Operations.Put_articleRating_id__id_
      WeclappAPI.Operations.Delete_articleRating_id__id_
      WeclappAPI.Operations.Get_articleSupplySource
      WeclappAPI.Operations.Post_articleSupplySource
      WeclappAPI.Operations.Get_articleSupplySource_count
      WeclappAPI.Operations.Get_articleSupplySource_id__id_
      WeclappAPI.Operations.Put_articleSupplySource_id__id_
      WeclappAPI.Operations.Get_batchNumber
      WeclappAPI.Operations.Get_batchNumber_count
      WeclappAPI.Operations.Get_batchNumber_id__id_
      WeclappAPI.Operations.Get_blanketPurchaseOrder
      WeclappAPI.Operations.Post_blanketPurchaseOrder
      WeclappAPI.Operations.Get_blanketPurchaseOrder_count
      WeclappAPI.Operations.Get_blanketPurchaseOrder_id__id_
      WeclappAPI.Operations.Put_blanketPurchaseOrder_id__id_
      WeclappAPI.Operations.Delete_blanketPurchaseOrder_id__id_
      WeclappAPI.Operations.Get_blanketPurchaseOrder_id__id__downloadLatestBlanketPurchaseOrderPdf
      WeclappAPI.Operations.Post_blanketPurchaseOrder_id__id__generateReleases
      WeclappAPI.Operations.Get_campaign
      WeclappAPI.Operations.Post_campaign
      WeclappAPI.Operations.Get_campaign_count
      WeclappAPI.Operations.Get_campaign_id__id_
      WeclappAPI.Operations.Put_campaign_id__id_
      WeclappAPI.Operations.Delete_campaign_id__id_
      WeclappAPI.Operations.Get_campaignParticipant
      WeclappAPI.Operations.Post_campaignParticipant
      WeclappAPI.Operations.Get_campaignParticipant_count
      WeclappAPI.Operations.Get_campaignParticipant_id__id_
      WeclappAPI.Operations.Put_campaignParticipant_id__id_
      WeclappAPI.Operations.Delete_campaignParticipant_id__id_
      WeclappAPI.Operations.Get_cashAccount
      WeclappAPI.Operations.Get_cashAccount_count
      WeclappAPI.Operations.Get_cashAccount_id__id_
      WeclappAPI.Operations.Get_comment
      WeclappAPI.Operations.Post_comment
      WeclappAPI.Operations.Get_comment_count
      WeclappAPI.Operations.Get_comment_id__id_
      WeclappAPI.Operations.Put_comment_id__id_
      WeclappAPI.Operations.Delete_comment_id__id_
      WeclappAPI.Operations.Get_commercialLanguage
      WeclappAPI.Operations.Get_commercialLanguage_count
      WeclappAPI.Operations.Get_commercialLanguage_id__id_
      WeclappAPI.Operations.Get_companySize
      WeclappAPI.Operations.Post_companySize
      WeclappAPI.Operations.Get_companySize_count
      WeclappAPI.Operations.Get_companySize_id__id_
      WeclappAPI.Operations.Put_companySize_id__id_
      WeclappAPI.Operations.Delete_companySize_id__id_
      WeclappAPI.Operations.Get_contact
      WeclappAPI.Operations.Post_contact
      WeclappAPI.Operations.Get_contact_count
      WeclappAPI.Operations.Get_contact_id__id_
      WeclappAPI.Operations.Put_contact_id__id_
      WeclappAPI.Operations.Delete_contact_id__id_
      WeclappAPI.Operations.Get_contact_id__id__downloadImage
      WeclappAPI.Operations.Post_contact_id__id__uploadImage
      WeclappAPI.Operations.Get_costCenter
      WeclappAPI.Operations.Get_costCenter_count
      WeclappAPI.Operations.Get_costCenter_id__id_
      WeclappAPI.Operations.Get_costCenterGroup
      WeclappAPI.Operations.Post_costCenterGroup
      WeclappAPI.Operations.Get_costCenterGroup_count
      WeclappAPI.Operations.Get_costCenterGroup_id__id_
      WeclappAPI.Operations.Put_costCenterGroup_id__id_
      WeclappAPI.Operations.Delete_costCenterGroup_id__id_
      WeclappAPI.Operations.Get_currency
      WeclappAPI.Operations.Get_currency_companyCurrency
      WeclappAPI.Operations.Get_currency_count
      WeclappAPI.Operations.Get_currency_id__id_
      WeclappAPI.Operations.Get_customAttributeDefinition
      WeclappAPI.Operations.Get_customAttributeDefinition_count
      WeclappAPI.Operations.Get_customAttributeDefinition_id__id_
      WeclappAPI.Operations.Get_customer
      WeclappAPI.Operations.Post_customer
      WeclappAPI.Operations.Get_customer_count
      WeclappAPI.Operations.Get_customer_id__id_
      WeclappAPI.Operations.Put_customer_id__id_
      WeclappAPI.Operations.Delete_customer_id__id_
      WeclappAPI.Operations.Get_customer_id__id__downloadImage
      WeclappAPI.Operations.Post_customer_id__id__uploadImage
      WeclappAPI.Operations.Get_customerCategory
      WeclappAPI.Operations.Post_customerCategory
      WeclappAPI.Operations.Get_customerCategory_count
      WeclappAPI.Operations.Get_customerCategory_id__id_
      WeclappAPI.Operations.Put_customerCategory_id__id_
      WeclappAPI.Operations.Delete_customerCategory_id__id_
      WeclappAPI.Operations.Get_customerLeadLossReason
      WeclappAPI.Operations.Post_customerLeadLossReason
      WeclappAPI.Operations.Get_customerLeadLossReason_count
      WeclappAPI.Operations.Get_customerLeadLossReason_id__id_
      WeclappAPI.Operations.Put_customerLeadLossReason_id__id_
      WeclappAPI.Operations.Delete_customerLeadLossReason_id__id_
      WeclappAPI.Operations.Get_customerTopic
      WeclappAPI.Operations.Post_customerTopic
      WeclappAPI.Operations.Get_customerTopic_count
      WeclappAPI.Operations.Get_customerTopic_id__id_
      WeclappAPI.Operations.Put_customerTopic_id__id_
      WeclappAPI.Operations.Delete_customerTopic_id__id_
      WeclappAPI.Operations.Get_customsTariffNumber
      WeclappAPI.Operations.Post_customsTariffNumber
      WeclappAPI.Operations.Get_customsTariffNumber_count
      WeclappAPI.Operations.Get_customsTariffNumber_id__id_
      WeclappAPI.Operations.Put_customsTariffNumber_id__id_
      WeclappAPI.Operations.Delete_customsTariffNumber_id__id_
      WeclappAPI.Operations.Get_document
      WeclappAPI.Operations.Get_document_count
      WeclappAPI.Operations.Get_document_id__id_
      WeclappAPI.Operations.Put_document_id__id_
      WeclappAPI.Operations.Delete_document_id__id_
      WeclappAPI.Operations.Get_document_id__id__download
      WeclappAPI.Operations.Get_document_id__id__downloadDocumentVersion
      WeclappAPI.Operations.Post_document_id__id__upload
      WeclappAPI.Operations.Post_document_upload
      WeclappAPI.Operations.Get_externalConnection
      WeclappAPI.Operations.Get_externalConnection_count
      WeclappAPI.Operations.Get_externalConnection_id__id_
      WeclappAPI.Operations.Get_fulfillmentProvider
      WeclappAPI.Operations.Get_fulfillmentProvider_count
      WeclappAPI.Operations.Get_fulfillmentProvider_id__id_
      WeclappAPI.Operations.Get_incomingGoods
      WeclappAPI.Operations.Post_incomingGoods
      WeclappAPI.Operations.Get_incomingGoods_count
      WeclappAPI.Operations.Get_incomingGoods_id__id_
      WeclappAPI.Operations.Put_incomingGoods_id__id_
      WeclappAPI.Operations.Post_incomingGoods_id__id__createCompensationShipment
      WeclappAPI.Operations.Post_incomingGoods_id__id__createCreditNote
      WeclappAPI.Operations.Get_lead
      WeclappAPI.Operations.Post_lead
      WeclappAPI.Operations.Get_lead_count
      WeclappAPI.Operations.Get_lead_id__id_
      WeclappAPI.Operations.Put_lead_id__id_
      WeclappAPI.Operations.Delete_lead_id__id_
      WeclappAPI.Operations.Get_lead_id__id__convertLeadToCustomer
      WeclappAPI.Operations.Get_lead_id__id__downloadImage
      WeclappAPI.Operations.Post_lead_id__id__uploadImage
      WeclappAPI.Operations.Get_leadRating
      WeclappAPI.Operations.Post_leadRating
      WeclappAPI.Operations.Get_leadRating_count
      WeclappAPI.Operations.Get_leadRating_id__id_
      WeclappAPI.Operations.Put_leadRating_id__id_
      WeclappAPI.Operations.Delete_leadRating_id__id_
      WeclappAPI.Operations.Get_leadSource
      WeclappAPI.Operations.Post_leadSource
      WeclappAPI.Operations.Get_leadSource_count
      WeclappAPI.Operations.Get_leadSource_id__id_
      WeclappAPI.Operations.Put_leadSource_id__id_
      WeclappAPI.Operations.Delete_leadSource_id__id_
      WeclappAPI.Operations.Get_ledgerAccount
      WeclappAPI.Operations.Post_ledgerAccount
      WeclappAPI.Operations.Get_ledgerAccount_count
      WeclappAPI.Operations.Get_ledgerAccount_id__id_
      WeclappAPI.Operations.Put_ledgerAccount_id__id_
      WeclappAPI.Operations.Delete_ledgerAccount_id__id_
      WeclappAPI.Operations.Get_legalForm
      WeclappAPI.Operations.Post_legalForm
      WeclappAPI.Operations.Get_legalForm_count
      WeclappAPI.Operations.Get_legalForm_id__id_
      WeclappAPI.Operations.Put_legalForm_id__id_
      WeclappAPI.Operations.Delete_legalForm_id__id_
      WeclappAPI.Operations.Get_manufacturer
      WeclappAPI.Operations.Post_manufacturer
      WeclappAPI.Operations.Get_manufacturer_count
      WeclappAPI.Operations.Get_manufacturer_id__id_
      WeclappAPI.Operations.Put_manufacturer_id__id_
      WeclappAPI.Operations.Delete_manufacturer_id__id_
      WeclappAPI.Operations.Get_meta_queryFilterProperties
      WeclappAPI.Operations.Get_meta_querySortProperties
      WeclappAPI.Operations.Get_meta_resources
      WeclappAPI.Operations.Get_notification
      WeclappAPI.Operations.Get_notification_count
      WeclappAPI.Operations.Get_notification_id__id_
      WeclappAPI.Operations.Post_notification_id__id__markRead
      WeclappAPI.Operations.Get_opportunity
      WeclappAPI.Operations.Post_opportunity
      WeclappAPI.Operations.Get_opportunity_count
      WeclappAPI.Operations.Get_opportunity_id__id_
      WeclappAPI.Operations.Put_opportunity_id__id_
      WeclappAPI.Operations.Delete_opportunity_id__id_
      WeclappAPI.Operations.Get_opportunityTopic
      WeclappAPI.Operations.Post_opportunityTopic
      WeclappAPI.Operations.Get_opportunityTopic_count
      WeclappAPI.Operations.Get_opportunityTopic_id__id_
      WeclappAPI.Operations.Put_opportunityTopic_id__id_
      WeclappAPI.Operations.Delete_opportunityTopic_id__id_
      WeclappAPI.Operations.Get_opportunityWinLossReason
      WeclappAPI.Operations.Post_opportunityWinLossReason
      WeclappAPI.Operations.Get_opportunityWinLossReason_count
      WeclappAPI.Operations.Get_opportunityWinLossReason_id__id_
      WeclappAPI.Operations.Put_opportunityWinLossReason_id__id_
      WeclappAPI.Operations.Delete_opportunityWinLossReason_id__id_
      WeclappAPI.Operations.Get_party
      WeclappAPI.Operations.Post_party
      WeclappAPI.Operations.Get_party_count
      WeclappAPI.Operations.Get_party_id__id_
      WeclappAPI.Operations.Put_party_id__id_
      WeclappAPI.Operations.Delete_party_id__id_
      WeclappAPI.Operations.Get_party_id__id__downloadImage
      WeclappAPI.Operations.Post_party_id__id__uploadImage
      WeclappAPI.Operations.Get_partyRating
      WeclappAPI.Operations.Post_partyRating
      WeclappAPI.Operations.Get_partyRating_count
      WeclappAPI.Operations.Get_partyRating_id__id_
      WeclappAPI.Operations.Put_partyRating_id__id_
      WeclappAPI.Operations.Delete_partyRating_id__id_
      WeclappAPI.Operations.Get_paymentMethod
      WeclappAPI.Operations.Post_paymentMethod
      WeclappAPI.Operations.Get_paymentMethod_count
      WeclappAPI.Operations.Get_paymentMethod_id__id_
      WeclappAPI.Operations.Put_paymentMethod_id__id_
      WeclappAPI.Operations.Delete_paymentMethod_id__id_
      WeclappAPI.Operations.Get_personalAccountingCode
      WeclappAPI.Operations.Post_personalAccountingCode
      WeclappAPI.Operations.Get_personalAccountingCode_count
      WeclappAPI.Operations.Get_personalAccountingCode_id__id_
      WeclappAPI.Operations.Put_personalAccountingCode_id__id_
      WeclappAPI.Operations.Delete_personalAccountingCode_id__id_
      WeclappAPI.Operations.Get_productionOrder
      WeclappAPI.Operations.Post_productionOrder
      WeclappAPI.Operations.Get_productionOrder_count
      WeclappAPI.Operations.Post_productionOrder_fastProductionBooking
      WeclappAPI.Operations.Get_productionOrder_id__id_
      WeclappAPI.Operations.Put_productionOrder_id__id_
      WeclappAPI.Operations.Delete_productionOrder_id__id_
      WeclappAPI.Operations.Get_productionOrder_id__id__downloadLatestProductionOrderPdf
      WeclappAPI.Operations.Get_purchaseInvoice
      WeclappAPI.Operations.Post_purchaseInvoice
      WeclappAPI.Operations.Get_purchaseInvoice_count
      WeclappAPI.Operations.Get_purchaseInvoice_id__id_
      WeclappAPI.Operations.Put_purchaseInvoice_id__id_
      WeclappAPI.Operations.Get_purchaseOrder
      WeclappAPI.Operations.Post_purchaseOrder
      WeclappAPI.Operations.Get_purchaseOrder_count
      WeclappAPI.Operations.Get_purchaseOrder_id__id_
      WeclappAPI.Operations.Put_purchaseOrder_id__id_
      WeclappAPI.Operations.Post_purchaseOrder_id__id__createIncomingGoods
      WeclappAPI.Operations.Post_purchaseOrder_id__id__createPurchaseInvoice
      WeclappAPI.Operations.Post_purchaseOrder_id__id__processDropshipping
      WeclappAPI.Operations.Get_purchaseOrderRequest
      WeclappAPI.Operations.Post_purchaseOrderRequest
      WeclappAPI.Operations.Get_purchaseOrderRequest_count
      WeclappAPI.Operations.Get_purchaseOrderRequest_id__id_
      WeclappAPI.Operations.Put_purchaseOrderRequest_id__id_
      WeclappAPI.Operations.Delete_purchaseOrderRequest_id__id_
      WeclappAPI.Operations.Post_purchaseOrderRequest_id__id__createBlanketPurchaseOrder
      WeclappAPI.Operations.Post_purchaseOrderRequest_id__id__createPurchaseOrder
      WeclappAPI.Operations.Get_quotation
      WeclappAPI.Operations.Post_quotation
      WeclappAPI.Operations.Get_quotation_count
      WeclappAPI.Operations.Get_quotation_id__id_
      WeclappAPI.Operations.Put_quotation_id__id_
      WeclappAPI.Operations.Delete_quotation_id__id_
      WeclappAPI.Operations.Post_quotation_id__id__createNewVersion
      WeclappAPI.Operations.Post_quotation_id__id__createQuotationPdf
      WeclappAPI.Operations.Get_quotation_id__id__downloadLatestQuotationPdf
      WeclappAPI.Operations.Get_remotePrintJob
      WeclappAPI.Operations.Post_remotePrintJob
      WeclappAPI.Operations.Get_remotePrintJob_count
      WeclappAPI.Operations.Post_remotePrintJob_createPrintJobWithDocument
      WeclappAPI.Operations.Get_remotePrintJob_id__id_
      WeclappAPI.Operations.Put_remotePrintJob_id__id_
      WeclappAPI.Operations.Delete_remotePrintJob_id__id_
      WeclappAPI.Operations.Get_salesChannel_activeSalesChannels
      WeclappAPI.Operations.Get_salesInvoice
      WeclappAPI.Operations.Post_salesInvoice
      WeclappAPI.Operations.Get_salesInvoice_count
      WeclappAPI.Operations.Get_salesInvoice_id__id_
      WeclappAPI.Operations.Put_salesInvoice_id__id_
      WeclappAPI.Operations.Delete_salesInvoice_id__id_
      WeclappAPI.Operations.Post_salesInvoice_id__id__createCreditNote
      WeclappAPI.Operations.Get_salesInvoice_id__id__downloadLatestSalesInvoicePdf
      WeclappAPI.Operations.Get_salesOrder
      WeclappAPI.Operations.Post_salesOrder
      WeclappAPI.Operations.Get_salesOrder_count
      WeclappAPI.Operations.Get_salesOrder_defaultValuesForCreate
      WeclappAPI.Operations.Get_salesOrder_id__id_
      WeclappAPI.Operations.Put_salesOrder_id__id_
      WeclappAPI.Operations.Post_salesOrder_id__id__cancelOrManuallyClose
      WeclappAPI.Operations.Post_salesOrder_id__id__createAdvancePaymentRequest
      WeclappAPI.Operations.Post_salesOrder_id__id__createCustomerReturn
      WeclappAPI.Operations.Post_salesOrder_id__id__createDropshipping
      WeclappAPI.Operations.Post_salesOrder_id__id__createPartPaymentInvoice
      WeclappAPI.Operations.Post_salesOrder_id__id__createPrepaymentFinalInvoice
      WeclappAPI.Operations.Post_salesOrder_id__id__createPurchaseOrder
      WeclappAPI.Operations.Post_salesOrder_id__id__createSalesInvoice
      WeclappAPI.Operations.Post_salesOrder_id__id__createShipment
      WeclappAPI.Operations.Get_salesOrder_id__id__downloadLatestOrderConfirmationPdf
      WeclappAPI.Operations.Post_salesOrder_id__id__manuallyClose
      WeclappAPI.Operations.Post_salesOrder_id__id__shipOrderForExternalFulfillment
      WeclappAPI.Operations.Get_salesStage
      WeclappAPI.Operations.Post_salesStage
      WeclappAPI.Operations.Get_salesStage_count
      WeclappAPI.Operations.Get_salesStage_id__id_
      WeclappAPI.Operations.Put_salesStage_id__id_
      WeclappAPI.Operations.Delete_salesStage_id__id_
      WeclappAPI.Operations.Get_sector
      WeclappAPI.Operations.Post_sector
      WeclappAPI.Operations.Get_sector_count
      WeclappAPI.Operations.Get_sector_id__id_
      WeclappAPI.Operations.Put_sector_id__id_
      WeclappAPI.Operations.Delete_sector_id__id_
      WeclappAPI.Operations.Get_serialNumber
      WeclappAPI.Operations.Get_serialNumber_count
      WeclappAPI.Operations.Get_serialNumber_id__id_
      WeclappAPI.Operations.Get_shipment
      WeclappAPI.Operations.Post_shipment
      WeclappAPI.Operations.Get_shipment_count
      WeclappAPI.Operations.Get_shipment_id__id_
      WeclappAPI.Operations.Put_shipment_id__id_
      WeclappAPI.Operations.Post_shipment_id__id__createSalesInvoice
      WeclappAPI.Operations.Post_shipment_id__id__createShippingLabelPdf
      WeclappAPI.Operations.Get_shipment_id__id__downloadLatestDeliveryNotePdf
      WeclappAPI.Operations.Get_shipment_id__id__downloadLatestPickingListPdf
      WeclappAPI.Operations.Get_shipment_id__id__downloadLatestShippingLabelPdf
      WeclappAPI.Operations.Get_shipmentMethod
      WeclappAPI.Operations.Post_shipmentMethod
      WeclappAPI.Operations.Get_shipmentMethod_count
      WeclappAPI.Operations.Get_shipmentMethod_id__id_
      WeclappAPI.Operations.Put_shipmentMethod_id__id_
      WeclappAPI.Operations.Delete_shipmentMethod_id__id_
      WeclappAPI.Operations.Get_shipmentReturnAssessment
      WeclappAPI.Operations.Post_shipmentReturnAssessment
      WeclappAPI.Operations.Get_shipmentReturnAssessment_count
      WeclappAPI.Operations.Get_shipmentReturnAssessment_id__id_
      WeclappAPI.Operations.Put_shipmentReturnAssessment_id__id_
      WeclappAPI.Operations.Delete_shipmentReturnAssessment_id__id_
      WeclappAPI.Operations.Get_shipmentReturnError
      WeclappAPI.Operations.Post_shipmentReturnError
      WeclappAPI.Operations.Get_shipmentReturnError_count
      WeclappAPI.Operations.Get_shipmentReturnError_id__id_
      WeclappAPI.Operations.Put_shipmentReturnError_id__id_
      WeclappAPI.Operations.Delete_shipmentReturnError_id__id_
      WeclappAPI.Operations.Get_shipmentReturnReason
      WeclappAPI.Operations.Post_shipmentReturnReason
      WeclappAPI.Operations.Get_shipmentReturnReason_count
      WeclappAPI.Operations.Get_shipmentReturnReason_id__id_
      WeclappAPI.Operations.Put_shipmentReturnReason_id__id_
      WeclappAPI.Operations.Delete_shipmentReturnReason_id__id_
      WeclappAPI.Operations.Get_shipmentReturnRectification
      WeclappAPI.Operations.Post_shipmentReturnRectification
      WeclappAPI.Operations.Get_shipmentReturnRectification_count
      WeclappAPI.Operations.Get_shipmentReturnRectification_id__id_
      WeclappAPI.Operations.Put_shipmentReturnRectification_id__id_
      WeclappAPI.Operations.Delete_shipmentReturnRectification_id__id_
      WeclappAPI.Operations.Get_shippingCarrier
      WeclappAPI.Operations.Post_shippingCarrier
      WeclappAPI.Operations.Get_shippingCarrier_count
      WeclappAPI.Operations.Get_shippingCarrier_id__id_
      WeclappAPI.Operations.Put_shippingCarrier_id__id_
      WeclappAPI.Operations.Delete_shippingCarrier_id__id_
      WeclappAPI.Operations.Get_supplier
      WeclappAPI.Operations.Post_supplier
      WeclappAPI.Operations.Get_supplier_count
      WeclappAPI.Operations.Get_supplier_id__id_
      WeclappAPI.Operations.Put_supplier_id__id_
      WeclappAPI.Operations.Delete_supplier_id__id_
      WeclappAPI.Operations.Get_supplier_id__id__downloadImage
      WeclappAPI.Operations.Post_supplier_id__id__uploadImage
      WeclappAPI.Operations.Get_tax
      WeclappAPI.Operations.Post_tax
      WeclappAPI.Operations.Get_tax_count
      WeclappAPI.Operations.Get_tax_findSalesTax
      WeclappAPI.Operations.Get_tax_id__id_
      WeclappAPI.Operations.Put_tax_id__id_
      WeclappAPI.Operations.Delete_tax_id__id_
      WeclappAPI.Operations.Get_termOfPayment
      WeclappAPI.Operations.Post_termOfPayment
      WeclappAPI.Operations.Get_termOfPayment_count
      WeclappAPI.Operations.Get_termOfPayment_id__id_
      WeclappAPI.Operations.Put_termOfPayment_id__id_
      WeclappAPI.Operations.Delete_termOfPayment_id__id_
      WeclappAPI.Operations.Get_title
      WeclappAPI.Operations.Post_title
      WeclappAPI.Operations.Get_title_count
      WeclappAPI.Operations.Get_title_id__id_
      WeclappAPI.Operations.Put_title_id__id_
      WeclappAPI.Operations.Delete_title_id__id_
      WeclappAPI.Operations.Get_unit
      WeclappAPI.Operations.Post_unit
      WeclappAPI.Operations.Get_unit_count
      WeclappAPI.Operations.Get_unit_id__id_
      WeclappAPI.Operations.Put_unit_id__id_
      WeclappAPI.Operations.Delete_unit_id__id_
      WeclappAPI.Operations.Get_user
      WeclappAPI.Operations.Get_user_count
      WeclappAPI.Operations.Get_user_currentUser
      WeclappAPI.Operations.Get_user_id__id_
      WeclappAPI.Operations.Get_user_id__id__userImage
      WeclappAPI.Operations.Get_user_id__id__userImageThumbnail
      WeclappAPI.Operations.Get_variantArticle
      WeclappAPI.Operations.Post_variantArticle
      WeclappAPI.Operations.Get_variantArticle_count
      WeclappAPI.Operations.Get_variantArticle_id__id_
      WeclappAPI.Operations.Put_variantArticle_id__id_
      WeclappAPI.Operations.Delete_variantArticle_id__id_
      WeclappAPI.Operations.Get_variantArticleAttribute
      WeclappAPI.Operations.Post_variantArticleAttribute
      WeclappAPI.Operations.Get_variantArticleAttribute_count
      WeclappAPI.Operations.Get_variantArticleAttribute_id__id_
      WeclappAPI.Operations.Put_variantArticleAttribute_id__id_
      WeclappAPI.Operations.Delete_variantArticleAttribute_id__id_
      WeclappAPI.Operations.Get_variantArticleVariant
      WeclappAPI.Operations.Get_variantArticleVariant_count
      WeclappAPI.Operations.Get_variantArticleVariant_id__id_
      WeclappAPI.Operations.Get_warehouse
      WeclappAPI.Operations.Get_warehouse_count
      WeclappAPI.Operations.Get_warehouse_id__id_
      WeclappAPI.Operations.Get_warehouseLevel
      WeclappAPI.Operations.Get_warehouseLevel_count
      WeclappAPI.Operations.Get_warehouseLevel_id__id_
      WeclappAPI.Operations.Get_warehouseStock
      WeclappAPI.Operations.Get_warehouseStock_count
      WeclappAPI.Operations.Get_warehouseStock_id__id_
      WeclappAPI.Operations.Get_warehouseStockMovement
      WeclappAPI.Operations.Post_warehouseStockMovement_bookIncomingMovement
      WeclappAPI.Operations.Post_warehouseStockMovement_bookOutgoingMovement
      WeclappAPI.Operations.Post_warehouseStockMovement_bookTransferMovement
      WeclappAPI.Operations.Get_warehouseStockMovement_count
      WeclappAPI.Operations.Get_warehouseStockMovement_id__id_
      WeclappAPI.Operations.Get_webhook
      WeclappAPI.Operations.Post_webhook
      WeclappAPI.Operations.Get_webhook_count
      WeclappAPI.Operations.Get_webhook_id__id_
      WeclappAPI.Operations.Put_webhook_id__id_
      WeclappAPI.Operations.Delete_webhook_id__id_
      WeclappAPI.Operations.Get_weclappOs
      WeclappAPI.Operations.Post_weclappOs
      WeclappAPI.Operations.Get_weclappOs_count
      WeclappAPI.Operations.Get_weclappOs_id__id_
      WeclappAPI.Operations.Put_weclappOs_id__id_
      WeclappAPI.Operations.Delete_weclappOs_id__id_
      WeclappAPI.Types
      WeclappAPI.TypeAlias
      WeclappAPI.Types.AccountingTransaction
      WeclappAPI.Types.AccountingTransactionDetail
      WeclappAPI.Types.Address
      WeclappAPI.Types.ArchivedEmail
      WeclappAPI.Types.Article
      WeclappAPI.Types.ArticleAlternativeQuantity
      WeclappAPI.Types.ArticleCalculationPrice
      WeclappAPI.Types.ArticleCategory
      WeclappAPI.Types.ArticleImage
      WeclappAPI.Types.ArticlePrice
      WeclappAPI.Types.ArticlePriceWithoutArticleReference
      WeclappAPI.Types.ArticlePriceWithoutSalesChannel
      WeclappAPI.Types.ArticleSupplySource
      WeclappAPI.Types.BatchNumber
      WeclappAPI.Types.BillOfMaterial
      WeclappAPI.Types.BlanketPurchaseOrder
      WeclappAPI.Types.BlanketPurchaseOrderStatusHistory
      WeclappAPI.Types.Campaign
      WeclappAPI.Types.CampaignParticipant
      WeclappAPI.Types.CashAccount
      WeclappAPI.Types.Comment
      WeclappAPI.Types.CommercialLanguage
      WeclappAPI.Types.CommissionSalesPartner
      WeclappAPI.Types.Contact
      WeclappAPI.Types.CostCenter
      WeclappAPI.Types.CostCenterWithDistributionPercentage
      WeclappAPI.Types.Currency
      WeclappAPI.Types.CustomAttribute
      WeclappAPI.Types.CustomAttributeDefinition
      WeclappAPI.Types.CustomAttributeDefinitionLabel
      WeclappAPI.Types.CustomAttributeDefinitionListValue
      WeclappAPI.Types.CustomValue
      WeclappAPI.Types.Customer
      WeclappAPI.Types.Document
      WeclappAPI.Types.DocumentVersion
      WeclappAPI.Types.EcommerceOrder
      WeclappAPI.Types.EmailAddresses
      WeclappAPI.Types.Entity
      WeclappAPI.Types.EntityReference
      WeclappAPI.Types.ExternalConnection
      WeclappAPI.Types.FastProductionBookingResult
      WeclappAPI.Types.FulfillmentProvider
      WeclappAPI.Types.IncomingGoods
      WeclappAPI.Types.IncomingGoodsItem
      WeclappAPI.Types.InvoiceStatusHistory
      WeclappAPI.Types.Lead
      WeclappAPI.Types.LedgerAccount
      WeclappAPI.Types.Notification
      WeclappAPI.Types.OnlineAccount
      WeclappAPI.Types.OnlyId
      WeclappAPI.Types.Opportunity
      WeclappAPI.Types.Party
      WeclappAPI.Types.PartyBankAccount
      WeclappAPI.Types.PartyEmailAddresses
      WeclappAPI.Types.PartyHabitualExporterLetterOfIntent
      WeclappAPI.Types.PaymentMethod
      WeclappAPI.Types.ProductionOrder
      WeclappAPI.Types.ProductionOrderItem
      WeclappAPI.Types.ProductionOrderStatusHistory
      WeclappAPI.Types.PurchaseInvoice
      WeclappAPI.Types.PurchaseInvoiceItem
      WeclappAPI.Types.PurchaseOrder
      WeclappAPI.Types.PurchaseOrderItem
      WeclappAPI.Types.PurchaseOrderRequest
      WeclappAPI.Types.PurchaseOrderRequestItem
      WeclappAPI.Types.PurchaseOrderRequestOffer
      WeclappAPI.Types.PurchaseOrderRequestOfferItem
      WeclappAPI.Types.PurchaseOrderRequestOfferItemInformation
      WeclappAPI.Types.PurchaseOrderRequestOfferItemScaleValue
      WeclappAPI.Types.PurchaseOrderRequestStatusHistory
      WeclappAPI.Types.PurchaseOrderStatusHistory
      WeclappAPI.Types.PurchaseShippingCostItem
      WeclappAPI.Types.Quotation
      WeclappAPI.Types.QuotationItem
      WeclappAPI.Types.QuotationStatusHistory
      WeclappAPI.Types.RecordAddress
      WeclappAPI.Types.ReductionAddition
      WeclappAPI.Types.ReductionAdditionItem
      WeclappAPI.Types.Releases
      WeclappAPI.Types.RemotePrintJob
      WeclappAPI.Types.SalesBillOfMaterialArticleItem
      WeclappAPI.Types.SalesChannel
      WeclappAPI.Types.SalesInvoice
      WeclappAPI.Types.SalesInvoiceItem
      WeclappAPI.Types.SalesOrder
      WeclappAPI.Types.SalesOrderItem
      WeclappAPI.Types.SalesOrderStatusHistory
      WeclappAPI.Types.SalesShippingCostItem
      WeclappAPI.Types.SalesStage
      WeclappAPI.Types.SalesStageHistory
      WeclappAPI.Types.SerialNumber
      WeclappAPI.Types.Shipment
      WeclappAPI.Types.ShipmentItem
      WeclappAPI.Types.ShipmentMethod
      WeclappAPI.Types.ShipmentReturnDescription
      WeclappAPI.Types.ShipmentStatus
      WeclappAPI.Types.ShippingCarrier
      WeclappAPI.Types.Supplier
      WeclappAPI.Types.SupplySource
      WeclappAPI.Types.Tax
      WeclappAPI.Types.TermOfPayment
      WeclappAPI.Types.TermOfPaymentCondition
      WeclappAPI.Types.Unit
      WeclappAPI.Types.User
      WeclappAPI.Types.VariantArticle
      WeclappAPI.Types.VariantArticleAttribute
      WeclappAPI.Types.VariantArticleAttributeOption
      WeclappAPI.Types.VariantArticleVariant
      WeclappAPI.Types.VariantArticleVariantWithoutReference
      WeclappAPI.Types.Warehouse
      WeclappAPI.Types.WarehouseLevel
      WeclappAPI.Types.WarehouseStock
      WeclappAPI.Types.WarehouseStockMovement
      WeclappAPI.Types.WarehouseStockReservation
      WeclappAPI.Types.Webhook
      WeclappAPI.Types.WeclappOs
      WeclappAPI.Configuration
      WeclappAPI.SecuritySchemes
      WeclappAPI.Common
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , text
    , ghc-prim
    , http-conduit
    , http-client
    , http-types
    , bytestring
    , aeson
    , unordered-containers
    , vector
    , scientific
    , time
    , mtl
    , transformers
  default-language: Haskell2010
